--- a/Sync/Sync.csproj
+++ b/Sync/Sync.csproj
@@ -81,13 +81,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogic\SQLBuilder.cs" />
     <Compile Include="Models\AbbreviatedContact.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Models\ContactQueryRequest.cs" />
     <Compile Include="Models\PagedResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VirtuousService.cs" />
+    <Compile Include="Services\DatabaseService.cs" />
+    <Compile Include="Services\VirtuousService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
